Changelog for Babel.

Babel 2.2.4-pl
==============
- Fixed issue #25: Unchecked "checkbox" TVs are now synchronized correctly.

Babel 2.2.3-rc1
==============
- Issue #18: Added 'id' placeholder for BabelLink chunk which is used by the BabelLinks snippet.
- Fixed issue #21: Manager redirect causes error in Google Chrome browser.

Babel 2.2.2-rc2
==============
- Fixed bug: Initial synchronization of TV values when setting a link manually didn't work.

Babel 2.2.2-rc1
==============
- Added feature #16: Values of synchronized TVs of the source resource(s) can be copied to the target resource when setting a translation link manually.
- Added showUnpublished parameter to BabelLinks and BabelTranslation snippets.

Babel 2.2.1-rc1
==============
- Added feature #11: User is redirect to new resource after creating a translation.
- Fixed issue #15: Babel TV of duplicated resources is being initiated.
- Alias is duplicated when creating an translation, too.

Babel 2.2.0-pl
==============
- Fixed bug which occured when creating new resources.
- Fixed bug in validation which is performed on setting a link manually.
- Improved performance of TV synchronization.
- Regarding issue #10: Added checks to handle invalid Babel settings (defined by the user).

Babel 2.1.1-pl1
==============
- Fixed issue #9: Calling deprecated and non-existing method in babel.class

Babel 2.1.1-rc1
==============
- Added &resourceId parameter to BabelLinks snippet.
- Added French translation for new keys from version 2.1.0-beta.
- Added BabelTranslation snippet to get the id of a translated resource in a given context.
- Fixed bug with empty babel settings (contextKeys and syncTvs).
- In order to protect the Babel TV from being manipulated manually its type is set to 'hidden' by default.

Babel 2.1.0-beta
==============
- Added Frech translation: Thanks to Romain <romain@meltingmedia.net>
- New Babel-Box:
  - A chunk is used to generate the language links (mgr/babelBoxItem).
  - Changed CSS.