@@ -35,6 +35,7 @@ $_lang['babellinks.tpl'] = 'Chunk pour afficher un lien de langue';
 $_lang['babellinks.activeCls'] = 'Classe CSS pour les liens de la langue active';
 $_lang['babellinks.resourceId'] = 'Id of resource of which links to translations should be displayed';
 $_lang['babellinks.showUnpublished'] = 'Flag whether to show unpublished translations';
+$_lang['babellinks.showCurrent'] = 'Flag whether to show a link to a translation of the current language';
 
 /* BabelTranslation snippet */
 $_lang['babeltranslation.resourceId'] = 'ID of resource of which a translated resource should be determined';
